service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: default
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30000  # Minikube için NodePort kullanımı
  type: NodePort
